--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1,7 +1,7 @@
 html{height:100%}
 body{font-size: 12px; height:100%;font-family:arial;}
 a{color: #000; text-decoration:none;}
-select{-webkit-appearance:none;-moz-appearance:none;appearance:none; padding:4px 10px;height: 25px;}
+select{-webkit-appearance:none;-moz-appearance:none;appearance:none; padding:4px 10px;height: 25px;font-size:12px;}
 input, button{padding:4px 10px;}
 /*--------------------------------------------------------------------------------------------------
  	 DEFAULT PAGE DEFINITIONS
